fixed summary section

--- a/index.ipynb
+++ b/index.ipynb
@@ -107,7 +107,7 @@
     "\n",
     "## Summary \n",
     "\n",
-    "In this codealong, we learned how to use Folium to create some cool interactive maps with only a few lines of python code! In the next lab, you'll synthesize your skills for the day together and create an interactive visualization map for data you retrieve from the Yelp API!"
+    "In this codealong, we learned how to use Folium to create some cool interactive maps with only a few lines of Python code!"
    ]
   }
  ],
