--- a/index.ipynb
+++ b/index.ipynb
@@ -12,7 +12,8 @@
     "\n",
     "## Objectives\n",
     "\n",
-    "You will be able to: \n",
+    "You will be able to:\n",
+    "\n",
     "* Create maps using Folium"
    ]
   },
@@ -113,9 +114,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python (learn-env)",
    "language": "python",
-   "name": "python3"
+   "name": "learn-env"
   },
   "language_info": {
    "codemirror_mode": {
@@ -127,7 +128,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.8.5"
   },
   "toc": {
    "base_numbering": 1,
